robinfriedli.glyph-bot.8f8906827e26dbb0b2e501e815ae2b947e99906b
Running as unit: run-p3414641-i11801624.scope; invocation ID: abad43d231894b23ac47d8186a688acf
    Updating `tuna` index
 Downloading crates ...
  Downloaded seize v0.3.3 (registry `tuna`)
  Downloaded clokwerk v0.4.0 (registry `tuna`)
  Downloaded command_attr v0.5.1 (registry `tuna`)
  Downloaded bcder v0.7.4 (registry `tuna`)
  Downloaded flate2 v1.0.29 (registry `tuna`)
  Downloaded flurry v0.5.1 (registry `tuna`)
  Downloaded aws-lc-rs v1.7.0 (registry `tuna`)
  Downloaded aws-lc-sys v0.15.0 (registry `tuna`)
   Compiling libc v0.2.153
   Compiling proc-macro2 v1.0.81
   Compiling unicode-ident v1.0.12
    Checking cfg-if v1.0.0
   Compiling autocfg v1.2.0
   Compiling version_check v0.9.4
   Compiling once_cell v1.19.0
    Checking bytes v1.6.0
    Checking smallvec v1.13.2
   Compiling parking_lot_core v0.9.10
   Compiling lock_api v0.4.12
    Checking pin-project-lite v0.2.14
    Checking log v0.4.21
    Checking scopeguard v1.2.0
   Compiling serde v1.0.199
   Compiling typenum v1.17.0
   Compiling generic-array v0.14.7
    Checking subtle v2.5.0
   Compiling quote v1.0.36
    Checking itoa v1.0.11
    Checking getrandom v0.2.14
   Compiling jobserver v0.1.31
    Checking spin v0.9.8
   Compiling syn v2.0.60
    Checking num_cpus v1.16.0
   Compiling cc v1.0.95
    Checking parking_lot v0.12.2
    Checking untrusted v0.9.0
   Compiling slab v0.4.9
    Checking futures-core v0.3.30
    Checking futures-sink v0.3.30
    Checking memchr v2.7.2
    Checking mio v0.8.11
    Checking signal-hook-registry v1.4.2
    Checking socket2 v0.5.6
    Checking pin-utils v0.1.0
   Compiling fs_extra v1.3.0
   Compiling dunce v1.0.4
    Checking futures-channel v0.3.30
    Checking futures-task v0.3.30
   Compiling cmake v0.1.50
    Checking tinyvec_macros v0.1.1
    Checking futures-io v0.3.30
    Checking tinyvec v1.6.0
   Compiling paste v1.0.14
    Checking fnv v1.0.7
   Compiling num-traits v0.2.18
    Checking unicode-bidi v0.3.15
   Compiling aws-lc-rs v1.7.0
    Checking block-buffer v0.10.4
    Checking crypto-common v0.1.6
    Checking rustls-pki-types v1.5.0
    Checking digest v0.10.7
   Compiling ring v0.17.8
   Compiling aws-lc-sys v0.15.0
    Checking unicode-normalization v0.1.23
    Checking cpufeatures v0.2.12
    Checking tracing-core v0.1.32
    Checking rand_core v0.6.4
    Checking mirai-annotations v1.12.0
    Checking byteorder v1.5.0
    Checking ppv-lite86 v0.2.17
    Checking percent-encoding v2.3.1
    Checking http v0.2.12
   Compiling httparse v1.8.0
    Checking base64 v0.21.7
    Checking rand_chacha v0.3.1
    Checking rand v0.8.5
   Compiling unicase v2.7.0
    Checking hashbrown v0.14.3
   Compiling thiserror v1.0.59
    Checking iana-time-zone v0.1.60
    Checking form_urlencoded v1.2.1
   Compiling rustls v0.22.4
    Checking equivalent v1.0.1
   Compiling crunchy v0.2.2
    Checking indexmap v2.2.6
    Checking idna v0.5.0
    Checking httpdate v1.0.3
    Checking mime v0.3.17
    Checking try-lock v0.2.5
   Compiling tiny-keccak v2.0.2
    Checking finl_unicode v1.2.0
   Compiling rustls v0.21.12
    Checking want v0.3.1
   Compiling mime_guess v2.0.4
    Checking http-body v0.4.6
    Checking stringprep v0.1.4
    Checking sha1 v0.10.6
    Checking sha2 v0.10.8
    Checking hmac v0.12.1
    Checking md-5 v0.10.6
   Compiling num-bigint v0.4.4
    Checking ryu v1.0.17
    Checking base64 v0.22.0
    Checking siphasher v0.3.11
    Checking tower-service v0.3.2
   Compiling libm v0.2.8
    Checking fallible-iterator v0.2.0
    Checking phf_shared v0.11.2
    Checking num-integer v0.1.46
    Checking postgres-protocol v0.6.6
    Checking http v1.1.0
   Compiling bigdecimal v0.4.3
    Checking encoding_rs v0.8.34
   Compiling rustls v0.23.5
   Compiling crossbeam-utils v0.8.19
   Compiling pq-sys v0.4.8
   Compiling serde_json v1.0.116
    Checking data-encoding v2.5.0
    Checking utf-8 v0.7.6
    Checking const-oid v0.9.6
   Compiling serde_derive v1.0.199
   Compiling tokio-macros v2.2.0
   Compiling zeroize_derive v1.4.2
   Compiling futures-macro v0.3.30
    Checking tokio v1.37.0
    Checking zeroize v1.7.0
   Compiling tracing-attributes v0.1.27
    Checking futures-util v0.3.30
   Compiling thiserror-impl v1.0.59
    Checking tracing v0.1.40
    Checking sct v0.7.1
    Checking rustls-webpki v0.101.7
   Compiling async-trait v0.1.80
   Compiling crc32fast v1.4.0
   Compiling syn v1.0.109
    Checking der v0.7.9
    Checking futures-executor v0.3.30
    Checking postgres-types v0.2.6
   Compiling const-random-macro v0.1.16
    Checking phf v0.11.2
    Checking tokio-util v0.7.10
    Checking tokio-rustls v0.24.1
   Compiling diesel_table_macro_syntax v0.1.0
    Checking webpki-roots v0.26.1
    Checking scheduled-thread-pool v0.2.7
   Compiling multer v2.1.0
   Compiling ahash v0.8.11
    Checking adler v1.0.2
    Checking bitflags v2.5.0
    Checking whoami v1.5.1
    Checking powerfmt v0.2.0
    Checking miniz_oxide v0.7.2
    Checking h2 v0.3.26
    Checking tokio-postgres v0.7.10
    Checking r2d2 v0.8.10
   Compiling diesel_derives v2.1.4
    Checking const-random v0.1.18
    Checking spki v0.7.3
    Checking futures v0.3.30
    Checking chrono v0.4.38
    Checking url v2.5.0
    Checking serde_urlencoded v0.7.1
    Checking deranged v0.3.11
   Compiling pin-project-internal v1.1.5
    Checking pem v3.0.4
    Checking headers-core v0.2.0
    Checking rustls-pemfile v1.0.4
    Checking bcder v0.7.4
    Checking hyper v0.14.28
    Checking ipnet v2.9.0
    Checking time-core v0.1.2
    Checking deadpool-runtime v0.1.3
    Checking uuid v1.8.0
    Checking sync_wrapper v0.1.2
    Checking retain_mut v0.1.9
   Compiling serenity v0.12.1
    Checking zerocopy v0.7.32
    Checking hex v0.4.3
    Checking webpki-roots v0.25.4
    Checking num-conv v0.1.0
    Checking signature v2.2.0
    Checking time v0.3.36
    Checking x509-certificate v0.23.1
    Checking deadpool v0.9.5
    Checking pin-project v1.1.5
    Checking diesel v2.1.6
    Checking headers v0.3.9
    Checking secrecy v0.8.0
    Checking dashmap v5.5.3
    Checking arrayvec v0.7.4
    Checking flate2 v1.0.29
    Checking crossbeam-channel v0.5.12
   Compiling command_attr v0.5.1
    Checking hyper-rustls v0.24.2
    Checking rustls-pemfile v2.1.2
    Checking reqwest v0.11.27
    Checking fxhash v0.2.1
    Checking scoped-futures v0.1.3
    Checking static_assertions v1.1.0
    Checking seize v0.3.3
    Checking openssl-probe v0.1.5
    Checking typemap_rev v0.3.0
    Checking uwl v0.6.0
    Checking levenshtein v1.0.5
    Checking scoped-tls v1.0.1
    Checking flurry v0.5.1
    Checking rustls-native-certs v0.7.0
    Checking rusty_pool v0.7.0
    Checking fern v0.6.2
    Checking clokwerk v0.4.0
    Checking lazy_static v1.4.0
    Checking dotenvy v0.15.7
error[E0271]: type mismatch resolving `<DB as TypeMetadata>::MetadataLookup == &mut <DB as TypeMetadata>::MetadataLookup`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/diesel-2.1.6/src/query_builder/ast_pass.rs:220:51
    |
220 |             } => collector.push_bound_value(bind, metadata_lookup)?,
    |                                                   ^^^^^^^^^^^^^^^ types differ

    Checking rustls-webpki v0.102.3
    Checking tokio-rustls v0.25.0
    Checking tungstenite v0.21.0
    Checking tokio-rustls v0.26.0
    Checking tokio-tungstenite v0.21.0
    Checking tokio-postgres-rustls v0.12.0
    Checking warp v0.3.7
For more information about this error, try `rustc --explain E0271`.
error: could not compile `diesel` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
